Added BubbleMsg for sending messages to shell

--- a/src/MiniCrossword/MiniCrossword.fsproj
+++ b/src/MiniCrossword/MiniCrossword.fsproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="External.fs" />
+        <Compile Include="BubbleMsg.fs" />
         <Compile Include="Settings.fs" />
         <Compile Include="Crossword.fs" />
         <Compile Include="About.fs" />
